fix(billings): remove account id from update docs
